3 fonction layout transformé en 1 Amelioration de la fonction sharePhoto avec une closure

--- a/Instagrid/Instagrid/Info.plist
+++ b/Instagrid/Instagrid/Info.plist
@@ -67,5 +67,7 @@
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Use photos to add more details to your trips</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Add picture to your library</string>
 </dict>
 </plist>
